Refactor linchuanchuan.sh for improved structure and functionality
- Enhanced the cleanup function by changing the trap to trigger on EXIT, ensuring proper resource management.
- Improved variable handling in the download_images function for better readability and consistency.
- Added a new pattern to .gitignore for main function refactoring plans, enhancing file management.
- Streamlined command-line argument parsing and validation, ensuring clearer logic flow and error handling.
- Updated comments and structure throughout the script to enhance clarity and maintainability.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ unused_code_report.txt
 unused_code_report*.txt
 *_report.txt
 return_variables_refactoring_report.txt
+main_function_refactoring_plan*.txt
