--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,10 @@ unused_code_report*.txt
 *_report.txt
 return_variables_refactoring_report.txt
 main_function_refactoring_plan*.txt
+
+# Scripts created for history rewrite task (removing hardcoded keys)
+cherry_pick_commits.sh
+complete_cherry_pick.sh
+final_cherry_pick.sh
+remove_old_commits.sh
+check_keys.sh
