feat: add support for custom cookies file in media uploader and Telegram bot
- Introduced a new feature to allow users to specify a custom cookies file in Mozilla/Netscape format for authenticated downloads, taking precedence over the existing Firefox cookie integration.
- Updated the README.md and example configuration to reflect the new cookies file option and its usage.
- Enhanced the Telegram bot to accept and validate the cookies file path, improving flexibility in cookie management.
- Added a Python script to extract cookies from Firefox, facilitating easier cookie file generation for users.

--- a/telegram_bot.yaml.example
+++ b/telegram_bot.yaml.example
@@ -10,6 +10,11 @@ owner_id: YOUR_TELEGRAM_USER_ID
 # Path to nostr_media_uploader.sh script
 script_path: ./nostr_media_uploader.sh
 
+# Optional: Path to cookies file (Mozilla/Netscape format)
+# If specified, will use --cookies option instead of --firefox when calling nostr_media_uploader.sh
+# Takes precedence over --firefox option
+# cookies_file: ./firefox_cookies.txt
+
 # Optional: Path to Cygwin installation (e.g., C:\cygwin64 or F:\cygwin64)
 # If not specified, will try to auto-detect common locations
 # cygwin_root: F:\cygwin64
