--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,9 @@ services:
     # Mount .nostr directory from host to container
     volumes:
       - ${HOME}/.nostr:/root/.nostr:ro
-      # Mount firefox_cookies.txt
-      - ./firefox_cookies.txt:/app/firefox_cookies.txt:ro
+      # Mount firefox_cookies.txt to be writable by the container
+      # yp-dlp tries to save cookies back to the file
+      - ./firefox_cookies.txt:/app/firefox_cookies.txt:rw
       # Mount telegram_bot.yaml config file
       - ./telegram_bot.yaml:/app/telegram_bot.yaml:ro
       # Mount nostr_media_uploader.sh and other scripts (needed by the bot)
