feat: enhance video encoding capabilities in media uploader
- Added support for specifying a comma-separated list of video encoders via command-line and environment variables, allowing users to customize encoding options.
- Implemented functions to check the availability and functionality of hardware encoders, improving the reliability of video processing.
- Updated the media uploader script to prioritize hardware encoders for better performance and efficiency during video conversion.
- Enhanced error handling and logging for encoder testing, providing clearer feedback on encoder availability and issues.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,11 @@ services:
     container_name: nostr-telegram-bot
     restart: unless-stopped
     
+    # Mount Intel GPU devices for Quick Sync Video acceleration
+    #devices:
+      # - /dev/dri:/dev/dri
+      # - /dev/dxg:/dev/dxg  # WSL2 uses dxg, not dri
+    
     # Mount .nostr directory from host to container
     volumes:
       - ${HOME}/.nostr:/root/.nostr:ro
