--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,8 @@ services:
     
     # Mount .nostr directory from host to container
     volumes:
-      - ${HOME}/.nostr:/root/.nostr:ro
+      # Mount .nostr directory must be writable because of history files
+      - ${HOME}/.nostr:/root/.nostr:rw
       # Mount firefox_cookies.txt to be writable by the container
       # yp-dlp tries to save cookies back to the file
       - ./firefox_cookies.txt:/app/firefox_cookies.txt:rw
