feat: enhance media processing with NSFW support and channel configuration
- Added an optional `nsfw` parameter to the `build_command` function to handle NSFW content marking.
- Updated the `process_media_group` function to detect and utilize channel configuration, including NSFW settings.
- Enhanced message handling to store and retrieve channel configuration for media groups, improving processing logic.
- Updated example configuration to include NSFW flag for channels, providing clearer usage guidance.

--- a/telegram_bot.yaml.example
+++ b/telegram_bot.yaml.example
@@ -46,6 +46,12 @@ channels:
   channel3:
     chat_id: -1009876543210
     profile_name: another_profile
+  
+  # Example channel 4: with NSFW flag enabled
+  channel4:
+    chat_id: -1001111111111
+    profile_name: nsfw_profile
+    nsfw: true  # Mark all posts from this channel as NSFW
 
 # Note: If no channels are configured, the bot will only process messages
 # from the owner (owner_id). Messages from channels will be ignored.
