feat: add cookie management for specific domains in media processing
- Introduced a new configuration option `disable_cookies_for_sites` to allow users to specify domains for which cookies should be disabled during media uploads.
- Implemented the `should_disable_cookies` function to check URLs against the disable list, enhancing privacy and control over cookie usage.
- Updated the `build_command` function to conditionally include cookies based on the new setting, improving flexibility in handling media uploads.
- Enhanced example configuration to demonstrate the usage of the new cookie management feature for specific channels.

--- a/telegram_bot.yaml.example
+++ b/telegram_bot.yaml.example
@@ -15,6 +15,14 @@ script_path: ./nostr_media_uploader.sh
 # Takes precedence over --firefox option
 # cookies_file: ./firefox_cookies.txt
 
+# Optional: List of domains to disable cookies for (global setting)
+# When a URL matches any domain in this list, --firefox and --cookies will not be added
+# Can be overridden per-channel
+# Examples:
+#   disable_cookies_for_sites: [facebook.com, instagram.com]
+#   disable_cookies_for_sites: [example.com]
+# disable_cookies_for_sites: []
+
 # Optional: Path to Cygwin installation (e.g., C:\cygwin64 or F:\cygwin64)
 # If not specified, will try to auto-detect common locations
 # cygwin_root: F:\cygwin64
@@ -52,6 +60,12 @@ channels:
     chat_id: -1001111111111
     profile_name: nsfw_profile
     nsfw: true  # Mark all posts from this channel as NSFW
+  
+  # Example channel 5: with disable cookies for specific sites
+  channel5:
+    chat_id: -1002222222222
+    profile_name: public_profile
+    disable_cookies_for_sites: [facebook.com, instagram.com]  # Don't use cookies for these sites
 
 # Note: If no channels are configured, the bot will only process messages
 # from the owner (owner_id). Messages from channels will be ignored.
