feat: add process management and timeout handling for script execution
- Introduced a new `script_timeout` configuration option to specify the maximum execution time for scripts, enhancing control over long-running processes.
- Implemented process tracking and cleanup logic to ensure all child processes are terminated on shutdown, improving resource management.
- Enhanced the `execute_script` function to handle timeouts gracefully, sending SIGINT to processes and allowing for cleanup of resources.
- Updated example configuration to demonstrate the usage of the new timeout feature, providing clearer guidance for users.

--- a/telegram_bot.yaml.example
+++ b/telegram_bot.yaml.example
@@ -23,6 +23,14 @@ script_path: ./nostr_media_uploader.sh
 #   disable_cookies_for_sites: [example.com]
 # disable_cookies_for_sites: []
 
+# Optional: Script execution timeout in seconds (default: 360 = 6 minutes)
+# Scripts that take longer than this will be forcefully killed
+# Useful for preventing long waits on rate-limited sites (e.g., X.com/Twitter)
+# Can be specified as:
+#   - Integer: 360 (seconds)
+#   - String with unit: "6m" (6 minutes) or "360s" (360 seconds)
+# script_timeout: 360
+
 # Optional: Path to Cygwin installation (e.g., C:\cygwin64 or F:\cygwin64)
 # If not specified, will try to auto-detect common locations
 # cygwin_root: F:\cygwin64
