feat: add NVIDIA NVENC support and update Docker configurations
- Introduced a new `docker-compose.nvidia.yml` file for NVIDIA NVENC hardware acceleration, enabling efficient H.264 and HEVC encoding.
- Added `Dockerfile.nvidia` to build the application with NVIDIA CUDA runtime and FFmpeg configured for NVENC support.
- Updated existing `docker-compose` files to use relative paths for the `.nostr` directory, ensuring consistent volume mounting across configurations.

--- a/docker-compose.vaapi.yml
+++ b/docker-compose.vaapi.yml
@@ -47,7 +47,7 @@ services:
     # Mount .nostr directory from host to container
     volumes:
       # Mount .nostr directory must be writable because of history files
-      - ${HOME}/.nostr:/root/.nostr:rw
+      - ./.nostr:/root/.nostr:rw
       # Mount firefox_cookies.txt to be writable by the container
       # yp-dlp tries to save cookies back to the file
       - ./firefox_cookies.txt:/app/firefox_cookies.txt:rw
